# rinha-with-rust

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  haproxy.cfg  info.json
src/: main.rs
