[package]
name = "rinha-with-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sonic-rs = "0.3"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
memmap2 = "0.9"
flate2 = "1"
chrono = { version = "0.4", features = ["std"], default-features = false }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
